# opinionated-hooks

./: .gitignore  .pre-commit-hooks.yaml  README.md  setup.cfg
pre_commit_hooks/: terraform_fmt_tabifypp.py
tests/: terraform_fmt_tabifypp_test.py
