[metadata]
name = opinionated-hooks
version = 0.0.1
description = Opinionated hooks for the pre-commit framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jf/opinionated-hooks
author = Jeffrey 'jf' Lim
author_email = rot13(ws.clcv@znvyfzneg.or)
license_files =
    LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    terraform-fmt-tabifypp = pre_commit_hooks.terraform_fmt_tabifypp:main
